Revision history for {{$dist->name}}

{{$NEXT}}
 - fix ABSTRACT on ::Helper::ResultSet::DateMethods1

2.020000  2014-03-04 08:31:39-06:00 America/Chicago
 - Add ::Helper::ResultSet::DateMethods1
 - Add abstract to ::Schema::LintContents

2.019004  2014-02-14 07:53:19 America/Chicago
 - Make IgnoreWantarray's search die in void context

2.019003  2014-02-07 22:21:47-06:00 America/Chicago
 - Fix ->copy on rows with proxied ResultSet methods (thanks moltar for the
   test!) (NOTE: This fix is what requires upgrading to DBIC 0.08260)

2.019002  2014-01-12 09:40:41 America/Chicago
 - Pick SQL for random row selection in a cleaner way
 - Stop using Class::MOP::load_class (RT#91035)
 - Really stop using RT

2.019001  2013-11-23 10:19:28 America/Chicago
 - Fix typo in ::CorrelateRelationship (Getty)

2.019000  2013-10-17 20:36:45 America/Chicago

 - Create clean_rs row shortcut (wreis)
 - Create DateTime schema helper (wreis)

2.018004  2013-10-07 15:23:39 America/Chicago
 - fix dep marked as test but actually runtime

2.018003  2013-09-26 08:06:03 America/Chicago
 - fix method shadowing with some helpers for ::Shortcut
 - ::OrderByMagic now correctly passes through arrayrefs (moltar)
 - ::OrderByMagic only prefixes with CSA when needed (moltar)

2.018002  2013-07-30 18:45:10 CST6CDT
 - ::Helper::ResultSet correctly uses all Helpers (reported by moltar)
   Note that some deprecated helpers were removed from ::ResultSet, so check
   your code to see if you use the as_virtual_view method.  If you do, replace
   it with as_subselect_rs and you'll be fine.
 - Fix return precedence in test (Reini Urban)

2.018001  2013-07-02 20:40:18 CST6CDT
 - Fix bug related to inheriting from ::Shortcut

2.018000  2013-06-22 17:03:29 CST6CDT
 - Add ::ResultSet::Shortcut::OrderByMagic (moltar)
 - Add ::ResultSet::Shortcut::Prefetch (Wallas Reis)
 - Add ::ResultSet::Shortcut::HasRows (Wallas Reis)
 - Add ::ResultSet::Shortcut::Limit (Wallas Reis)
 - make ::ResultSet::Me more flexible (moltar)